--- a/catalog.css
+++ b/catalog.css
@@ -193,3 +193,11 @@ margin-top: 200px;
 body{
     background-color: #000;
 }
+
+
+.sneaker_name{
+    font-family:"Roboto Condensed", sans-serif ;
+    font-weight: 700;
+font-size: 20px;
+color: white;
+}
