--- a/cart.css
+++ b/cart.css
@@ -138,3 +138,27 @@ padding-top: 35px;
     height: 30px;
     margin-top: 45px;
 }
+
+.total-price{
+    font-family:"Roboto Condensed", sans-serif ;
+    font-weight: 700;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: white;
+    padding-top: 50px;
+    text-align: center;
+}
+
+.buy-button{
+    width: 300px;
+    height: 100px;
+    font-family:"Roboto Condensed", sans-serif ;
+    font-weight: 700;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    border: none;
+    background-color: gray;
+    margin-left:625px ;
+}
