--- a/catalog.css
+++ b/catalog.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .nav_box{
     width: 1920px;
     /* height: 148px; */
@@ -38,6 +39,7 @@
     font-weight: 700;
 font-size: 20px;
 color: white;
+white-space: nowrap;
 }
 
 
@@ -130,6 +132,7 @@ height: 375px;
     width: 1920px;
 height: 539px;
 background-color: #000;
+margin-top: 200px;
 }
 
 
@@ -208,4 +211,37 @@ color: white;
     font-weight: 700;
 font-size: 15px;
 color: white;
+}
+
+
+.filtex_box{
+    width: 250px;
+    height: 50px;
+    margin-left: 1600px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.search{
+    margin-top: 30px;
+    width: 250px;
+    height: 25px;
+    font-family: "Mulish", sans-serif;
+    border: 2px solid #c8d1e5;
+    border-radius: 5px;
+    font-weight: 600;
+font-size: 18px;
+color: #1b1c40;
+}
+
+.select{
+    border: 2px solid #dee2e6;
+    font-family: "Mulish", sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+padding: 24px 16px 24px 24px;
+width: 255px;
+height: 50px;
+background: #fff;
 }
