--- a/catalog.css
+++ b/catalog.css
@@ -245,3 +245,27 @@ width: 255px;
 height: 50px;
 background: #fff;
 }
+
+.notification {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: gray;
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    opacity: 0;
+  }
+  
+  .notification.show {
+    opacity: 1;
+  }
+
+  .add_to_car{
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+  }
+  
