--- a/cart.css
+++ b/cart.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 .nav_box{
     width: 1920px;
     /* height: 148px; */
     background-color: rgb(46, 45, 45);
     display: flex;
     justify-content: space-between;
+    margin: auto;
 }
 
 
@@ -38,6 +41,7 @@
     font-weight: 700;
 font-size: 20px;
 color: white;
+white-space: nowrap;
 }
 
 body{
@@ -157,8 +161,13 @@ padding-top: 35px;
     font-size: 50px;
     text-transform: uppercase;
     color: white;
+    padding-top: 20px;
     text-align: center;
     border: none;
     background-color: gray;
-    margin-left:800px ;
+    display: flex;
+    justify-content: center;
+   margin: auto;
+   
+
 }
