--- a/catalog.css
+++ b/catalog.css
@@ -7,6 +7,7 @@
     background-color: rgb(46, 45, 45);
     display: flex;
     justify-content: space-between;
+    margin: auto;
 }
 
 
@@ -133,6 +134,7 @@ height: 375px;
 height: 539px;
 background-color: #000;
 margin-top: 200px;
+margin: auto;
 }
 
 
@@ -217,10 +219,13 @@ color: white;
 .filtex_box{
     width: 250px;
     height: 50px;
-    margin-left: 1600px;
+    margin-left: 1700px;
     display: flex;
     flex-direction: column;
     gap: 5px;
+   
+    
+  
 }
 
 .search{
@@ -268,4 +273,3 @@ background: #fff;
     color: white;
     text-align: center;
   }
-  
