--- a/home.css
+++ b/home.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body{
+    width: 100%;
+    overflow-x: hidden;
+}
+
 .nav_box{
     width: 1920px;
     /* height: 148px; */
     background-color: black;
     display: flex;
     justify-content: space-between;
+    margin: auto;
 }
 
 
@@ -56,6 +63,7 @@ white-space: nowrap;
     width: 1920px;
 height: 120px;
 background-color: black;
+margin: auto;
 }
 
 .trackstore_text{
@@ -86,6 +94,7 @@ margin-left: 321px;
 padding-left: 50px;
 cursor: pointer;
 transition: transform 0.3s ease, background-color 0.3s ease;
+/* margin: auto; */
 }
 
 .shop_now:hover{
@@ -110,9 +119,10 @@ font-size: 50px;
 text-transform: uppercase;
 color: black;
 position: relative;
-top: -72px;
-left: 700px;
+/* top: -72px;
+left: 700px; */
 white-space: nowrap;
+text-align: center;
 }
 
 .img_container{
@@ -123,15 +133,10 @@ white-space: nowrap;
 display: flex;
 justify-content: space-between;
 gap: 30px;
+margin: auto;
 }
 
-.green_rectangle{
-    width: 155px;
-height: 64px;
-background-color: #AFED00;
-margin-top: 111px;
-margin-left: 1100px;
-}
+
 
 .asset{
     position: relative;
@@ -167,12 +172,13 @@ margin-left: 245px;
 display: flex;
 justify-content: space-between;
 gap: 154px;
+margin: auto;
 }
 
 .position_img_container{
     width: 2000px;
     height: 251px;
-   
+    margin: auto;
 }
 
 .tips_text{
@@ -188,21 +194,18 @@ color: rgba(0, 0, 0, 0.3);
     color: #000; 
 }
 
-.under_tips{
-    /* margin-top: 31px; */
-    margin-top: 60px;
-    margin-left:890px ;
-}
+
 
 
 .big_gender_container{
     width: 1369px;
     height: 605px;
-    margin-top: 125px;
+    margin-top: 150px;
     margin-left: 310px;
     display: flex;
     justify-content: space-between;
     gap:30px;
+    margin: auto;
    
 }
 
@@ -255,6 +258,7 @@ z-index: -1;
 height: 1075px;
 background-color: #111111;
 position: relative;
+margin: auto;
 
 }
 
@@ -310,19 +314,20 @@ padding-top: 5px;
 }
 
 .other_rectangle{
-    position: relative;
-    top: -510px;
-    left: 535px;
+    position: absolute;
+    left: 535px; 
+    top: 380px;
 }
 
 .white_sneaker{
-    position: relative;
-    top: -540px;
+    position: absolute;
+    top: 440px;
+    left: 300px;
 }
 
 .big_asset{
-    position: relative;
-    top: -1300px;
+    position: absolute;
+    /* top: -1300px; */
 }
 
 
@@ -331,6 +336,7 @@ padding-top: 5px;
     width: 1920px;
 height: 539px;
 background-color: #000;
+margin: auto;
 }
 
 
@@ -348,6 +354,7 @@ margin: auto;
     width: 183px;
     height: 250px;
     margin-top: 79px ;
+    margin: auto;
 
 }
 
@@ -369,6 +376,7 @@ white-space: nowrap;
     justify-content: space-between;
     flex-wrap: wrap;
     gap:5.38px ;
+    margin: auto;
 }
 
 .footer_secondary_text{
@@ -388,16 +396,19 @@ margin-top: 200px;
 
 .end_content{
     padding-left: 250px;
+    
 }
 
 
 .contents {
     width: 1920px;
     height: 932px;
-    overflow: hidden; /* Скрытие слайдов, которые не видны */
-    position: relative; /* Для правильной работы z-index */
-    transition: transform 0.7s ease; /* Плавный сдвиг */
+    overflow: hidden;
+    position: relative; 
+    transition: transform 0.7s ease; 
     display: flex;
+    margin: auto;
+    
 }
 
 .content {
